<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oscar.mycalculadora.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/txtRes"
            android:layout_weight="1"
            android:elevation="1dp"
            android:typeface="normal"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:rowCount="4"
        android:paddingTop="70dp"
        android:elevation="2dp">

        <TextView
            android:id="@+id/numero_7"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/siete"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/numero_8"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/ocho" />

        <TextView
            android:id="@+id/numero_9"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/nueve" />

        <TextView
            android:id="@+id/numero_4"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/cuatro" />

        <TextView
            android:id="@+id/numero_5"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/cinco" />

        <TextView
            android:id="@+id/numero_6"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/seis" />

        <TextView
            android:id="@+id/signo_por"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:gravity="center"
            android:text="@string/mult" />

        <TextView
            android:id="@+id/textView10"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:text="@string/div" />

        <TextView
            android:id="@+id/numero_1"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/uno" />

        <TextView
            android:id="@+id/numero_2"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/dos" />

        <TextView
            android:id="@+id/numero_3"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/tres" />

        <TextView
            android:id="@+id/signo_menos"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:gravity="center"
            android:text="@string/resta" />

        <TextView
            android:id="@+id/punto"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:gravity="center_horizontal"
            android:text="@string/coma" />

        <TextView
            android:id="@+id/cero"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/cero" />

        <TextView
            android:id="@+id/signo_igual"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:text="@string/igual" />

        <TextView
            android:id="@+id/signo_mas"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:text="@string/suma" />
    </GridLayout>
</RelativeLayout>
